# Project_HasTeX_Python_Version

./: README.md
PyTeX/: README_PyTeX.md  pyproject.toml
PyTeX/pytex/: itemize.py  tex_to_pdf.py
pytex/: README_PyTeX.md  pyproject.toml
pytex/pytex/: itemize.py  tex_to_pdf.py
